--- a/todo.html
+++ b/todo.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>To-Do App</title>
-  <link rel="stylesheet" href="todo.css">
+  <!-- <link rel="stylesheet" href="todo.css"> -->
+  <link rel="stylesheet" href="sample.css">
 </head>
 <body>
   <div class="todo-container">
