--- a/todo.html
+++ b/todo.html
@@ -7,12 +7,15 @@
   <!-- <link rel="stylesheet" href="sample.css"> -->
 </head>
 <body>
-  <div class="todo-container">
+  <main>
+    <div class="todo-container">
     <h1>My To-Do List</h1>
     <input type="text" id="task-input" placeholder="Add a new task...">
     <button id="add-task">Add</button>
     <ul id="task-list"></ul>
   </div>
+  </main>
+  
   <script src="todo.js"></script>
 </body>
 </html>
