--- a/todo.html
+++ b/todo.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>To-Do App</title>
-  <!-- <link rel="stylesheet" href="todo.css"> -->
-  <link rel="stylesheet" href="sample.css">
+  <link rel="stylesheet" href="todo.css">
+  <!-- <link rel="stylesheet" href="sample.css"> -->
 </head>
 <body>
   <main>
