--- a/todo.html
+++ b/todo.html
@@ -7,7 +7,20 @@
   <!-- <link rel="stylesheet" href="sample.css"> -->
 </head>
 <body>
-  
+  <header>
+  <nav class="navbar">
+    <div class="logo">MyLogo</div>
+    <ul class="nav-links">
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Sign-Up</a></li>
+    </ul>
+    <div class="user-profile">
+      <img src="user.jpg" alt="User" />
+    </div>
+  </nav>
+</header>
   <main>
     <div class="todo-container">
     <h1>My To-Do List</h1>
