--- a/todo.html
+++ b/todo.html
@@ -22,7 +22,8 @@
         <li><a href="#">Sign-Up</a></li>
       </ul>
       <div class="user-profile">
-        <img src="user.jpg" alt="User" />
+        <i id="user" class="fa-regular fa-circle-user "></i>
+        <!-- <img src="user.jpg" alt="User" /> -->
       </div>
     </nav>
   </header>
