--- a/todo.html
+++ b/todo.html
@@ -6,7 +6,9 @@
   <title>To-Do App</title>
   <link rel="stylesheet" href="todo.css">
   <!-- <link rel="stylesheet" href="sample.css"> -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -15,6 +17,11 @@
       <div class="logo">
         <i class="fa-solid fa-tornado"></i>TO-DO
       </div>
+
+      <div class="hamburger" onclick="toggleMenu()">
+        ☰
+      </div>
+
       <ul class="nav-links">
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">About Us</a></li>
